<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#ffffff"
    android:elevation="2dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="top"
        android:text="@string/text_view_access"
        android:textColor="@color/colorDeep"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/text_view_bank" />

        <Spinner
            android:id="@+id/spinner_bank"
            android:layout_width="wrap_content"
            android:layout_height="32dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_pwd" />

        <EditText
            android:id="@+id/edit_text_pwd"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="00 00 00 00"
            android:textColor="@color/colorNormal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_start" />

        <EditText
            android:id="@+id/edit_text_start"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:gravity="center"
            android:inputType="number"
            android:text="0"
            android:textColor="@color/colorNormal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_length" />

        <EditText
            android:id="@+id/edit_text_length"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:gravity="center"
            android:inputType="number"
            android:text="4"
            android:textColor="@color/colorNormal" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_value"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="top"
        android:padding="5dp"
        android:textColor="@color/colorNormal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/check_box_hex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="HEX" />

        <Button
            android:id="@+id/button_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_read"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_write"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_access_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_clear"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>