<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#ffffff"
    android:elevation="2dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="top"
        android:text="@string/text_view_power"
        android:textColor="@color/colorDeep"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_power"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center"
            android:text="dBm" />

        <Button
            android:id="@+id/button_get_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_get"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_set_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_set"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>