<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_layout_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#ffffff"
            android:elevation="1dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="top"
                android:text="@string/text_view_selected"
                android:textColor="@color/colorDeep"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_selected"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_selected_not"
                    android:textColor="@color/colorDeep"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_deselect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_deselect"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/layout_access" />

        <include layout="@layout/layout_lock" />

        <include layout="@layout/layout_kill" />

    </LinearLayout>

</ScrollView>