<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android_custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.example.handheld.view.CycleBar
            android:id="@+id/cycle_bar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="32dp"
            android_custom:information="@string/info_battery_left"
            android_custom:position="0"
            android_custom:roundColor="@color/colorLight"
            android_custom:roundProgressColor="@color/colorAccent"
            android_custom:roundWidth="5dip"
            android_custom:textColor="@color/colorNormal"
            android_custom:textDis="90%"
            android_custom:textSize="40sp" />

        <com.example.handheld.view.MyListView
            android:id="@+id/list_view_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/white"
            android:divider="#e0e0e0"
            android:dividerHeight="1px"
            android:elevation="2dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/white"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_view_auto_connect" />

            <Switch
                android:id="@+id/switch_auto_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

        </LinearLayout>

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="64dp"
            android:text="@string/button_search"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>