<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_tag"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="#ffffff"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="#"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_inv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="PC + EPC"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="RSSI"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_view_count"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#f0f0f0" />

        <ListView
            android:id="@+id/list_view_inventory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:clickable="true"
            android:divider="#eeeeee"
            android:dividerHeight="1px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f0f0f0"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_unique"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:textColor="@color/colorDeep"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_speed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:textColor="@color/colorDeep"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#f0f0f0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_inventory_once"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_inventory_once"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_inventory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_inventory"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_inventory_stop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_stop"
                android:textColor="@android:color/white" />

            <ImageButton
                android:id="@+id/button_clear"
                style="?borderlessButtonStyle"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_clear" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>